<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="17dp"
    android:layout_gravity="bottom"
    android:background="@drawable/cov_bottom_dialog_bg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:text="@string/cov_iot_devices_setting_modify_name"
        android:textColor="@color/ai_icontext1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/cov_iot_round_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <FrameLayout
        android:id="@+id/fl_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/cov_edit_text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/cov_iot_devices_setting_input_name"
            android:inputType="text"
            android:maxLength="10"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:textColor="@color/ai_icontext1"
            android:textColorHint="@color/ai_icontext2" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:background="@drawable/cov_iot_round_close" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_limit_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/cov_iot_devices_setting_name_limit"
        android:textColor="@color/ai_red6"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_input"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/ai_dp_small"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/cov_confirm_button_bg"
        android:text="@string/cov_iot_devices_setting_modify_name_confirm"
        android:textSize="15sp"
        android:textColor="@color/ai_brand_white10"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_limit_tip" />

</androidx.constraintlayout.widget.ConstraintLayout> 