<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ai_fill1">

    <!-- header title bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/cov_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cov_iot_devices_prepare"
            android:textColor="@color/ai_icontext1"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- device preview area -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_device_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="26dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="#263075FF"
        app:layout_constraintTop_toBottomOf="@id/cl_title_bar">

        <!-- add ViewPager2 for image sliding -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- indicator inside CardView, above images -->
        <LinearLayout
            android:id="@+id/ll_indicators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="12dp">

            <View
                android:id="@+id/indicator_1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/shape_indicator_selected" />

            <View
                android:id="@+id/indicator_2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/shape_indicator_normal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- setup hint -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/cv_device_preview"
        app:layout_constraintBottom_toTopOf="@id/cb_confirm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_setup_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal">
                
                <TextView
                    android:id="@+id/tv_setup_hint_part1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cov_iot_devices_prepare_tip_1_part1"
                    android:textColor="@color/ai_icontext1"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                    
                <TextView
                    android:id="@+id/tv_setup_hint_part2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cov_iot_devices_prepare_tip_1_part2"
                    android:textColor="@color/ai_green6"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                    
                <TextView
                    android:id="@+id/tv_setup_hint_part3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cov_iot_devices_prepare_tip_1_part3"
                    android:textColor="@color/ai_icontext1"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_permission_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cov_iot_devices_prepare_tip_2"
                android:textColor="@color/ai_icontext1"
                android:textSize="14sp"
                android:layout_marginTop="14dp"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:id="@+id/ll_permissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="24dp"
                android:weightSum="3">

                <!-- location info -->
                <LinearLayout
                    android:id="@+id/ll_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        app:cardCornerRadius="28dp"
                        app:cardBackgroundColor="#333333">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/cov_iot_location_icon"
                            android:layout_gravity="center"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cov_iot_devices_prepare_location"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <!-- bluetooth -->
                <LinearLayout
                    android:id="@+id/ll_bluetooth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        app:cardCornerRadius="28dp"
                        app:cardBackgroundColor="#333333">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/cov_iot_bluetooth_icon"
                            android:layout_gravity="center"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cov_iot_devices_prepare_bluetooth"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <!-- Wi-Fi -->
                <LinearLayout
                    android:id="@+id/ll_wifi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        app:cardCornerRadius="28dp"
                        app:cardBackgroundColor="#333333">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/cov_iot_wifi_icon"
                            android:layout_gravity="center"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cov_iot_devices_prepare_wifi"
                        android:textColor="@color/ai_icontext1"
                        android:textSize="14sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- operation confirmation -->
    <CheckBox
        android:id="@+id/cb_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cov_iot_devices_prepare_ready"
        android:textColor="@color/ai_icontext1"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        android:paddingStart="3dp"
        android:background="@android:color/transparent"
        android:button="@null"
        android:drawableStart="@drawable/agent_terms_cb_selector"
        android:drawablePadding="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- next button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ai_dp_default"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="56dp"
        android:text="@string/cov_iot_devices_prepare_next"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:textStyle="bold"
        android:textColor="@color/ai_brand_white10"
        android:textSize="16sp"
        android:enabled="false"
        app:cornerRadius="12dp"
        app:rippleColor="#1AFFFFFF"
        app:backgroundTint="@color/ai_brand_main6"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>