<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ai_fill1">

    <!-- main content -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/ai_fill5"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_title_wifi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title_wifi_part1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cov_iot_wifi_title_part1"
                    android:textColor="@color/ai_icontext1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_title_wifi_part2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cov_iot_wifi_title_part2"
                    android:textColor="@color/ai_green6"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_title_wifi_part3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cov_iot_wifi_title_part3"
                    android:textColor="@color/ai_icontext1"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_subtitle_wifi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cov_iot_wifi_title_2"
                android:textColor="@color/ai_icontext1"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_title_wifi" />

            <TextView
                android:id="@+id/tv_wifi_tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/cov_iot_wifi_title_tips"
                android:textColor="@color/ai_green6"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle_wifi" />

            <!-- Wi-Fi icon area -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_wifi_icon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="315:199"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_wifi_tip">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cov_iot_wifi_bg_2" />

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Wi-Fi name selection -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_wifi_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/ai_input"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_main_content"
        app:strokeColor="@color/ai_line1"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_wifi_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/ai_icontext1"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_change_wifi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_wifi"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/ai_dp_2small"
                android:layout_marginEnd="6dp"
                android:background="@drawable/cov_wift_change_btn_bg"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:paddingHorizontal="15dp"
                android:text="@string/cov_iot_wifi_change"
                android:textAllCaps="false"
                android:textColor="@color/ai_icontext1"
                android:textSize="13sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#1AFFFFFF" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_wifi_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:text="@string/cov_iot_wifi_warning"
        android:textColor="@color/ai_icontext1"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/cv_wifi_password"
        app:layout_constraintStart_toStartOf="@+id/cv_wifi_name"
        app:layout_constraintTop_toBottomOf="@+id/cv_wifi_name" />

    <!-- Wi-Fi password input -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_wifi_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/ai_input"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_wifi_name"
        app:strokeColor="@color/ai_line1"
        app:strokeWidth="0.5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_wifi_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/cov_iot_wifi_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:singleLine="true"
                android:textColor="@color/ai_icontext1"
                android:textColorHint="#999999"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@id/iv_toggle_password"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/iv_toggle_password"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/cov_iot_hide_pw"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/ai_icontext1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- next button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ai_dp_default"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/cov_iot_devices_prepare_next"
        android:textAllCaps="false"
        android:textColor="@color/ai_brand_white10"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/ai_brand_main6"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_wifi_password"
        app:rippleColor="#1AFFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout> 